<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/menu_task_1"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task1" />
        <item
            android:id="@+id/menu_task_2"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task2" />
        <item
            android:id="@+id/menu_task_3"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task3" />
        <item
            android:id="@+id/menu_task_4"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task4" />
        <item
            android:id="@+id/menu_task_5"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task5" />
        <item
            android:id="@+id/menu_task_6"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task6" />
        <item
            android:id="@+id/menu_task_7"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task7" />
        <item
            android:id="@+id/menu_task_8"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task8" />
        <item
            android:id="@+id/menu_task_9"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task9" />
        <item
            android:id="@+id/menu_task_10"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task10" />
        <item
            android:id="@+id/menu_task_11"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task11" />
        <item
            android:id="@+id/menu_task_12"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task12" />
        <item
            android:id="@+id/menu_task_13"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task13" />
        <item
            android:id="@+id/menu_task_14"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task14" />
        <item
            android:id="@+id/menu_task_15"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task15" />
        <item
            android:id="@+id/menu_task_16"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_task16" />
    </group>
</menu>