<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.drawerapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_task1"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.drawerapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_task1"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/menu_task_1"
        android:name="com.example.drawerapp.ui.zad1.Task1Fragment"
        android:label="@string/menu_task1"
        tools:layout="@layout/fragment_task1" />

    <fragment
        android:id="@+id/menu_task_2"
        android:name="com.example.drawerapp.ui.zad2.Task2Fragment"
        android:label="@string/menu_task2"
        tools:layout="@layout/fragment_task2" />

    <fragment
        android:id="@+id/menu_task_3"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task3"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_4"
        android:name="com.example.drawerapp.ui.zad4.Task4Fragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_5"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_6"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_7"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_8"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_9"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_10"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_11"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_12"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_13"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_14"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_15"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_task_16"
        android:name="com.example.drawerapp.ui.home.HomeFragment"
        android:label="@string/menu_task4"
        tools:layout="@layout/fragment_home" />

</navigation>